# plate-planner-api

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  env_diagnose.sh  env_diagnose.txt  project_structure.txt  pyproject.toml  restructure_data_folders.sh
src/: main.py
src/api/: app.py
src/config/: config.py  paths.py  substitution_config.py
src/core/: server.py
src/database/: add_edges_from_csv.py  bootstrap_graph.py  build_similar_to_edges.py  create_ingredients_list.py  database_context.py  explore_util.py  ingredient.py  ingredient_relationships.py  load.py  load_ingredient_list_to_neo4j.py  load_into_neo4j.py  recipe_eda_report.txt  upload_recipe_metadata.py
src/evaluation/: coverage_audit.py  diagnose_targets.py  filter_edges.py  graph_diagnostics.py  hybrid_substitution.py  random_subs.py  ranx_code.py  ranx_suggest_recipes.py  run_substitution_queries.py  substitution_eval_results.json  suggest_substitutes.py
src/ml_models/: recipe_features.npy.npz  recipe_labels.npy  substitution_labels.pkl
src/ml_pipeline/: model_pipeline.py  read_dataset.py  word_cloud.py
src/ml_training/: 00_split_dataset.py  01_load_clean_parse.py  02_extract_actions.py  03_build_context_vectors.py  04_train_faiss_substitution_model.py  06_load_into_neo4j.py  07_explore_neo4j_and_save_summary.py  07_explore_neo4j_util.py  08_build_similar_to_edges.py  09_add_substitutes_with_edges.py  09_run_substitution_queries_and_analyze.py  10_add_substitution_edges_from_csv.py  11_run_substitution_queries_and_analyze.py  diagnose_substitution_targets.py  filter_substitution_edges_before_neo4j.py  hybrid_substitution.py  ingredient_normalizer.py  ingredients_no_substitutes_normalized.txt  model_pipeline.py  neo4j_substitution_coverage_audit.py  normalizer_config.yaml  prepare_recipe_training_data.py  prepare_substitution_training_data.py  random_subs.py  read_dataset.py  search_faiss_by_title.py  substitution_target_diagnostics.txt  suggest_substitutes_in_context.py  train_recipe_model.py  train_substitution_model.py  update_normalizer_blacklist.py
src/models/: request_response_models.py
src/pipelines/: add_substitutes_with_edges.py  build_context_vectors.py  extract_cooking_verbs.py  parse_raw_recipes.py  split_dataset.py  train_faiss_substitution_model.py
src/services/: neo4j_service.py
src/utils/: ingredient_normalizer.py  model_pipeline.py  prepare_graph_csvs.py  read_dataset.py  recipesuggestionmodel.py  search_faiss_by_title.py  update_normalizer_blacklist.py
tests/: test_main.py
